# bubble_chats

./: LICENSE  README.md
browser-bubble/: background.js  content.js  manifest.json  options.html  options.js
desktop-bubble/: bubble.py  docker-compose.yml  requirements.txt  run.sh
desktop-bubble/linux-desktop-bubble/: .env.example  Dockerfile  bubble.py
desktop-bubble/windows-desktop-bubble/: .env.example
desktop-bubble/windows-desktop-bubble/src/: index.html  main.js  style.css
desktop-bubble/windows-desktop-bubble/src-tauri/: Cargo.toml  tauri.conf.json
desktop-bubble/windows-desktop-bubble/src-tauri/icons/: README.md
desktop-bubble/windows-desktop-bubble/src-tauri/src/: api.rs  main.rs  storage.rs
website-bubble/: .env.example  package.json  playwright-contact.js  server.js
website-bubble/functions/api/: chat.js
website-bubble/js/: bubble.js
