[package]
name    = "windows-desktop-bubble"
version = "0.1.0"
edition = "2021"

[lib]
name = "windows_desktop_bubble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "windows-desktop-bubble"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
reqwest    = { version = "0.12", features = ["json", "stream"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
screenshots = "0.8"
keyring    = "3"
base64     = "0.22"
futures-util = "0.3"
